--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -111,6 +111,9 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
+    // NanoHTTPD for embedded HTTP server
+    implementation 'org.nanohttpd:nanohttpd:2.3.1'
+
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
